--- a/Flavours of the day/Brunch/brunch.html
+++ b/Flavours of the day/Brunch/brunch.html
@@ -35,7 +35,7 @@
     
 
     <section class="recipes">
-        <h2>Indian Salad Recipes</h2>
+        <h2>Indian Brunch Recipes</h2>
         <div class="recipe-cards" id="recipe-cards">
             </div>
     </section>
